Release 4.27
	- raise a HXLHTMLException (subclass of HXLIOException) when HTML markup found
	- clean dates that are integers, assuming seconds or days since epoch (with cutouts for years and month days)

2022-08-05 Release 4.26
	- use loglevel CRITICAL only for infrastructure failures
	- don't put tracebacks in logging (avoid logger.exception())

2022-07-15 Release 4.25.2
	- raise exception for HTML input (prevents tagger exploit in HXL Proxy)
	- make hxl.input.munge_url() public
	- remove default tags for hxlcount script so that it can just count lines of data

2022-06-28 Release 4.25.1
	- support optionally filling merged areas (XLS and XLSX only)
	- support optionally scanning CKAN datasets for the first HXLated resource (in hxl.data(), not make_input())
	- support Google Sheets interactive view URLs for XLSX files (but not tab identifiers)
	- make Excel workbook handling more efficient
	- add --encoding option to all command-line scripts (tested with CSV)
	- add --expand-merged option to all comand-line scripts
	- add --scan-ckan-resources option to all command-line scripts
	- add hxl.input.InputOption object to hold all input options
	- add info method to input objects to get general info about an XLSX file (including HXLated and merged areas in each sheet)
	- refactor input and model classes
	- upgrade to xlrd3 version 1.1.0

2022-02-28 Release 4.25
	- remove discontinued "encoding" keyword for json.load (Python 3.9)
	- rename the hxl.io module to hxl.input (to avoid problems in Python on Windows)

2021-04-23 Release 4.24
	- fix bug that prevented tagger from adding tags if there was a blank row before the text headers

2021-02-08 Release 4.23
	- handle encoding errors in CSV more gracefully (replace with "?")
	- fix bug in JSON recipes (correct "key" to "tags" in the sort filter)
	- fix bug in the sort filter when there is no key and untagged columns on the right side of the dataset

2021-01-15 Release 4.22
	- consolidate recent bugfix releases