@@ -1,6 +1,7 @@
 Release 4.27
 	- raise a HXLHTMLException (subclass of HXLIOException) when HTML markup found
 	- clean dates that are integers, assuming seconds or days since epoch (with cutouts for years and month days)
+	- bypass RequestResponseIOWrapper, because it's causing grief; need to make sure content still gets uncompressed
 
 2022-08-05 Release 4.26
 	- use loglevel CRITICAL only for infrastructure failures
